# build-nanogpt2

./: README.md  play.ipynb  pyproject.toml  train_gpt2.py  train_gpt2_jax.py
