[project]
name = "build-nanogpt2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flax>=0.10.6",
    "jax[cuda12]>=0.5.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy<2",
    "optax>=0.2.5",
    "tiktoken>=0.9.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "transformers>=4.53.0",
]
